resources/assets/sass/_main.scss
$navbar-padding-bottom: 10px;

.navbar {
  border-width: 0;
  background-color: rgba(255, 255, 255, 0.6);
  padding-bottom: $navbar-padding-bottom;
  margin-bottom: 0px;
}

$nav-height: 100px;

.nav-logo {
  height: $nav-height;
}

$parallax-window-height: 600px;

.parallax-window {
  background: transparent;
  min-height: $parallax-window-height;
}

.parallax-window-nav {
  margin-top: -$nav-height - $navbar-padding-bottom;
  min-height: $parallax-window-height + $nav-height;
  a {
    color: $red-youtube;
    // Offset button by half of navbar's size since it moves the percieved center
    margin-top: ($nav-height + $navbar-padding-bottom) / 2;
  }
  a:hover {
    color: $red-youtube-hover;
  }
  font-size: 94pt;
}

.register-login {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 40px;
}

.modal-video {
  display: flex;
  justify-content: center;
}




.greeting {
  margin-bottom: 32px;
}

.greeting p {
  font-size: 21px;
  font-weight: 200;
  margin-bottom: 0px;
}

hr {
  border-color: #e0e0e0;
}

.btn-accent {
  @extend .btn-default;
  background-color: $brand-accent;
  color: white;
}

.width-100 {
  width: 100% !important;
}

.alerts-container {
  position: absolute;
  top: 20px;
  right: 0;
  left: 0;
  z-index: 1;
}

.parsley-errors-list {
  color: $brand-danger;
  margin-top: 8px;
}

.vertical-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

